# harness-benchmark

./: .env.example  .gitignore  LICENSE  README.md  analyze.py  pyproject.toml
eval/: judge.py  runner.py  tracing.py
harnesses/: ai_agent.py  claude_sdk.py  common.py  langgraph_h.py  langgraph_react.py  openai_agents.py  openai_common.py  openai_langgraph_h.py  openai_langgraph_react.py  thin.py
harnesses/providers/: __init__.py  anthropic.py  gemini.py  openai.py
tasks/: registry.py
tasks/code/: import_chain.py  json_parser.py  lru_cache.py  merge_intervals.py
tasks/research/: bug_rca.py  compare_specs.py  rate_limiter.py
tasks/tool_chain/: csv_mean.py  find_todos.py  rename_symbol.py
tools/: __init__.py  bash.py  fs.py
